Fix the comportament of ContainerListSkills to align content

--- a/Styles/components/SectionSkills.css
+++ b/Styles/components/SectionSkills.css
@@ -12,7 +12,9 @@
 
     display: flex;
     flex-direction: column;
+    align-content: space-between;
     gap: 40px;
+    
     flex-wrap: wrap;
 }
 
